# oguogu

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.local.yaml  docker-compose.yaml  launch_local.sh
.github/workflows/: test.yml
app/flutter_oguogu/: README.md  pubspec.yaml
app/flutter_oguogu/lib/: main.dart  theme.dart
app/flutter_oguogu/linux/: CMakeLists.txt
app/flutter_oguogu/test/: widget_test.dart
app/flutter_oguogu/web/: index.html  manifest.json
app/flutter_oguogu/windows/: CMakeLists.txt
contracts/: README.md  remappings.txt
contracts/script/arbitrum/: deploy.s.sol
contracts/src/: Oguogu.sol  multicall3.sol
contracts/test/: Oguogu.t.sol  TestToken.t.sol
infra/: cert.pub  seal.sh  sync.sh
infra/db/: init.sql
infra/docs/: SETUP-Openstack.md  answer.txt  setup-k3s.md
server/: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
server/src/: app.py  container.py  domains.py  exceptions.py  routers.py  settings.py  utils.py
server/src/abis/: OGUOGU.json  TestUSDT.json  constants.py
server/src/contracts/: OGUOGU.ts  contract.spec.ts  index.ts  utils.py
server/src/contracts/factories/: OGUOGU__factory.ts  index.ts
server/src/database/: container.py  database.py  entity.py  repository.py
server/src/registry/: activity.py  challenge.py  container.py  grader.py  proof.py  reward.py  service.py  transaction.py
server/src/storage/: container.py  repository.py
server/tests/: conftest.py  test_utils.py
server/tests/contracts/: test_utils.py
server/tests/database/: test_repository.py
server/tests/registry/: test_challenge.py  test_grade.py  test_reward.py  test_service.py
(+38 files in other folders)
