[tool.poetry]
name = "ogugu-server"
version = "0.1.0"
description = ""
authors = ["craftsangjae <craftsangjae@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
dependency-injector = "^4.44.0"
web3 = "^7.6.1"
fastapi = {extras = ["uvloop"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.7.1"
cryptography = "^44.0.0"
pytz = "^2024.2"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
testcontainers = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"